--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -491,13 +491,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
@@ -570,18 +607,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Busselton</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>70.09</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>-33.6500</td>\n",
+       "      <td>115.3333</td>\n",
+       "      <td>Observatory Guest House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Butaritari</td>\n",
+       "      <td>KI</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>3.0707</td>\n",
+       "      <td>172.7902</td>\n",
+       "      <td>Isles Sunset Lodge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cidreira</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>74.46</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-30.1811</td>\n",
+       "      <td>-50.2056</td>\n",
+       "      <td>Hotel Castelo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Souillac</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>75.58</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-20.5167</td>\n",
+       "      <td>57.5167</td>\n",
+       "      <td>Shanti Maurice Resort &amp; Spa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chumikan</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>8.98</td>\n",
+       "      <td>light snow</td>\n",
+       "      <td>54.7183</td>\n",
+       "      <td>135.3150</td>\n",
+       "      <td>Fortuna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Punta Arenas</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>57.31</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-53.1500</td>\n",
+       "      <td>-70.9167</td>\n",
+       "      <td>Hotel Hain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Eureka</td>\n",
+       "      <td>US</td>\n",
+       "      <td>65.68</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>40.8021</td>\n",
+       "      <td>-124.1637</td>\n",
+       "      <td>Eureka Inn Trademark By Wyndham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Lata</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>49.71</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>40.1629</td>\n",
+       "      <td>-8.3327</td>\n",
+       "      <td>Casa Maquia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Ushuaia</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>49.66</td>\n",
+       "      <td>heavy intensity rain</td>\n",
+       "      <td>-54.8000</td>\n",
+       "      <td>-68.3000</td>\n",
+       "      <td>Albatross Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>San Joaquin</td>\n",
+       "      <td>US</td>\n",
+       "      <td>73.63</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>37.9333</td>\n",
+       "      <td>-121.3011</td>\n",
+       "      <td>University Plaza Waterfront Hotel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           City Country  Max Temp   Current Description      Lat       Lng  \\\n",
+       "0     Busselton      AU     70.09            few clouds -33.6500  115.3333   \n",
+       "1    Butaritari      KI     81.88            light rain   3.0707  172.7902   \n",
+       "2      Cidreira      BR     74.46             clear sky -30.1811  -50.2056   \n",
+       "3      Souillac      MU     75.58      scattered clouds -20.5167   57.5167   \n",
+       "4      Chumikan      RU      8.98            light snow  54.7183  135.3150   \n",
+       "5  Punta Arenas      CL     57.31         broken clouds -53.1500  -70.9167   \n",
+       "6        Eureka      US     65.68       overcast clouds  40.8021 -124.1637   \n",
+       "7          Lata      PT     49.71       overcast clouds  40.1629   -8.3327   \n",
+       "8       Ushuaia      AR     49.66  heavy intensity rain -54.8000  -68.3000   \n",
+       "9   San Joaquin      US     73.63             clear sky  37.9333 -121.3011   \n",
+       "\n",
+       "                          Hotel Name  \n",
+       "0            Observatory Guest House  \n",
+       "1                 Isles Sunset Lodge  \n",
+       "2                      Hotel Castelo  \n",
+       "3        Shanti Maurice Resort & Spa  \n",
+       "4                            Fortuna  \n",
+       "5                         Hotel Hain  \n",
+       "6    Eureka Inn Trademark By Wyndham  \n",
+       "7                        Casa Maquia  \n",
+       "8                    Albatross Hotel  \n",
+       "9  University Plaza Waterfront Hotel  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hotel_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City                   0\n",
+       "Country                0\n",
+       "Max Temp               0\n",
+       "Current Description    0\n",
+       "Lat                    0\n",
+       "Lng                    0\n",
+       "Hotel Name             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 7. Drop the rows where there is no Hotel Name.\n",
     "hotel_df.dropna(inplace = True)\n",
@@ -591,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,11 +851,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be472825fa6849699dd3d1312dde1a6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
     "\n",
